pgxnclient 0.3
==============

- 'pgxn' script converted into a generic dispatcher in order to allow
  additional commands to be implemented in external scripts and in any
  language.
- Added 'help' command to get informations about program and commands.


pgxnclient 0.2.1
================

- Lowercase search for distributions in the API (issue #3).
- Fixed handling of zip files not containing entries for the directory.
- More informative error messages when some item is not found on PGXN.


pgxnclient 0.2
==============

- Dropped list command (use info --versions instead).
- Skip extension load/unload if the provided file is not sql.


pgxnclient 0.1a4
================

- The spec can point to a local file/directory for install
- Read the sha1 from the META.json as it may be different from the one
  in the dist.json
- Run sudo in the installation phase of the install command.


pgxn.client 0.1a3
=================

- Fixed executable mode for scripts unpacked from the zip files.
- Added 'list' and 'info' commands.


pgxn.client 0.1a2
=================

- Added database connection parameters for the 'check' command.


pgxn.client 0.1a1
=================

- Fist version released on PyPI.