@@ -4,6 +4,7 @@ pgxnclient 0.3
 - 'pgxn' script converted into a generic dispatcher in order to allow
   additional commands to be implemented in external scripts and in any
   language.
+- commands accept extension names too, not only specs.
 - Added 'help' command to get informations about program and commands.
 
 
